--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -27,6 +27,8 @@
         <a href="{{ post.url | relative_url }}" rel="permalink">{{ title }}</a>
       {% endif %}
     </h2>
-    {% include page__meta.html type=include.type %}
+    {% if site.category_archive.type and post.categories[0] and site.tag_archive.type and post.tags[0] %}
+      {%- include post__taxonomy.html -%}
+    {% endif %}
   </article>
 </div>
